# agente_autonomo

./: .coverage  .env.backup  .gitignore  AGENTS.md  ANALISE_GERAL.md  ANALISE_PIPELINE_HEPHAESTUS.md  ANALISE_PROFUNDA_SISTEMA.md  ANALISE_SISTEMA_THREAD_WORKERS.md  API_REST_DOCUMENTATION.md  CAPABILITIES.md  CLAUDE.md  CODE_OF_CONDUCT.md  CORRECOES_BUGS_CRITICOS.md  CURSOR_MCP_GUIA_FINAL.md  GUIA_MCP_CURSOR.md  HEPHAESTUS_MEMORY.json  HOT_RELOAD_DOCUMENTATION.md  INTEGRATOR_AGENT_SUMMARY.md  ISSUES.md  MANIFESTO.md  MODULARIZATION_PLAN.md  MONITORAMENTO_HEPHAESTUS.md  NIGHT_AGENT_README.md  NIGHT_WORK_SUMMARY.md  PROPOSTA_SERVIDOR_MCP.md  README.md  README_CRYPTO_HUNTER.md  REORGANIZATION_SUMMARY.md  RESUMO_ANALISE_MELHORIAS.md  RESUMO_PROXIMOS_PASSOS.md  REVISAO_BUGS.md  ROADMAP.md  analyze_meta_functionalities.py  app.py  cli.py  configure_llm_apis.py  crypto_hunter_24_7.py  debug_keys.py  demo_autonomous_control.py  demo_self_awareness.py  (+53 more)
agent/: __init__.py  advanced_knowledge_system.py  agents.py  async_orchestrator.py  brain.py  code_metrics.py  code_validator.py  code_validator.py.bak  cognitive_evolution_manager.py  config_loader.py  cycle_runner.py  deep_validator.py  dependency_resolver.py  enhanced_cache_integration.py  enhanced_monitor_integration.py  error_analyzer.py  file_manager.py  hephaestus_agent.py  hephaestus_config.json  hot_reload_manager.py  llm_performance_booster.py  memory.py  meta_cognitive_controller.py  meta_intelligence_core.py  model_optimizer.py  objective_generator.py  optimized_pipeline.py  patch_applicator.py  performance_analyzer.py  performance_monitor.py  project_scanner.py  project_scanner.py.bak  prompt_builder.py  queue_manager.py  root_cause_analyzer.py  self_awareness_core.py  state.py  system_activator.py  tool_executor.py  tool_executor.py.bak  (+1 more)
agent/agents/: __init__.py  agent_expansion_coordinator.py  architect_agent.py  bug_hunter_agent.py  capability_gap_detector.py  code_review_agent.py  cycle_monitor_agent.py  debt_hunter_agent.py  dependency_fixer_agent.py  error_analyzer.py  error_correction.py  error_detector_agent.py  maestro_agent.py  performance_analyzer.py  prompt_optimizer.py  self_reflection_agent.py  swarm_coordinator_agent.py
agent/config/: technical_debt_config.yaml
agent/utils/: error_prevention_system.py  infrastructure_manager.py  json_parser.py  llm_client.py  llm_optimizer.py  night_improvements.py  startup_validator.py  ux_enhancer.py
config/: base_config.yaml  default.yaml  example_config.yaml
docs/: ARCHITECTURE.md  CAPABILITIES.md  CONTRIBUTING.md  ISSUES.md  MANIFESTO.md  META_FUNCTIONALITIES_ROADMAP.md  README.md
generated_interfaces/: arthur_interface_1751661619.html  demo_api_docs.md  demo_dashboard.html
performance/: profiling.py
scripts/: evolution_monitor.py  run_feature_activator.py  run_monitor_test.sh  test_cursor_protection.py  thread_workers_demo.py
templates/: dashboard.html
tests/: conftest.py  test_agents.py  test_brain.py  test_code_metrics.py  test_code_validator.py  test_config_loading.py  test_deep_validator.py  test_hephaestus.py  test_main_flow.py  test_memory.py  test_memory_integration.py  test_patch_applicator.py  test_performance.py  test_project_scanner.py  test_security_performance_upgrades.py
tools/: app.py  test_meta_intelligence.py
(+795 files in other folders)
