[project]
name = "agente-autonomo"
version = "0.1.0"
description = ""
authors = [
    {name = "MrDeox",email = "arthurptc33@gmail.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "requests (>=2.31.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "python-dotenv (>=1.0.0)",
    "psutil (>=5.9.8)",
    "pytest (>=7.0.0)",
    "pytest-mock (>=3.0.0)",
    "radon (>=5.1.0)",
    "pandas (>=1.0.0)",
    "fastapi (>=0.100.0)",
    "uvicorn[standard] (>=0.20.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "typer (>=0.16.0,<0.17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
